added API Gateway and Eureka service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=8082
 
+spring.datasource.url=jdbc:mysql://localhost:3306/smbusers
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.generate-ddl=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+
+spring.security.user.name=kiran
+spring.security.user.password=kiran
+
+
+spring.application.name=USER-SERVICE
